# RobotSoftwareSynthesis

./: README.md
GeneratedCode/Burger_1_OpenCR/: Doxyfile  Makefile
GeneratedCode/Burger_1_OpenCR/src/application/: Burger_1_color_O_color_0.cpp  Burger_1_led_O_led_0.cpp  Burger_1_wheel_O_wheelControl_0.cpp  turtlebot3_burger.h
GeneratedCode/Burger_1_OpenCR/src/kernel/: UKTimer.c
GeneratedCode/Burger_1_RaspberryPi4_8/: Makefile.am
GeneratedCode/Burger_1_RaspberryPi4_8/src/application/: .Burger_1_camera_0.cpp.swp  Burger_1_GA_DTA_0.cpp  Burger_1_Robot_REMOTE_CONTROL_ReceiveCommandFromOperator_Burger_getModeTransferCommand_0.cpp  Burger_1_Robot_REMOTE_CONTROL_RemoteControl_Burger_remoteControl_0.cpp  Burger_1_Robot_SEARCH_GROUPING_ReceiveCommandFromOperator_Burger_getModeTransferCommand_0.cpp  Burger_1_Robot_groupA_SEARCHIN_MODE_SEARCHIN_Search_Burger_searchV3_R_controlAndReport_0.cpp  Burger_1_Robot_groupA_SEARCHIN_MODE_SEARCHIN_Search_Burger_searchV3_R_detectFrontMember_0.cpp  Burger_1_Robot_groupA_SEARCHIN_MODE_SEARCHIN_Search_Burger_searchV3_R_leader_0.cpp  Burger_1_Robot_groupA_SEARCHIN_MODE_SEARCHIN_Search_searchV3_0.c  Burger_1_Robot_groupA_SEARCHIN_MODE_SEARCHIN_Search_searchV3_0.cicl.h  Burger_1_Robot_groupB_SEARCHIN_MODE_SEARCHIN_Search_Burger_searchV3_R_controlAndReport_0.cpp  Burger_1_Robot_groupB_SEARCHIN_MODE_SEARCHIN_Search_Burger_searchV3_R_detectFrontMember_0.cpp  Burger_1_Robot_groupB_SEARCHIN_MODE_SEARCHIN_Search_Burger_searchV3_R_leader_0.cpp  Burger_1_Robot_groupB_SEARCHIN_MODE_SEARCHIN_Search_searchV3_0.c  Burger_1_Robot_groupB_SEARCHIN_MODE_SEARCHIN_Search_searchV3_0.cicl.h  Burger_1_action.c  Burger_1_action.h  Burger_1_camera_0.cpp  Burger_1_color_R_color_0.cpp  Burger_1_common.h  Burger_1_control_0.c  Burger_1_distance_0.cpp  Burger_1_event.c  Burger_1_event.h  Burger_1_group.c  Burger_1_group.h  Burger_1_group_action.c  Burger_1_group_action.cicl.h  Burger_1_grouping.cicl  Burger_1_grouping.cicl.h  Burger_1_grouping.cpp  Burger_1_leader.c  Burger_1_leader_0.c  Burger_1_leader_lib.cicl.h  Burger_1_led_R_led_0.cpp  Burger_1_listen.cic  Burger_1_listen_0.c  Burger_1_mode.c  Burger_1_mode.h  Burger_1_port.c  (+21 more)
GeneratedCode/Burger_2_OpenCR/: Makefile
GeneratedCode/Burger_2_OpenCR/src/api/: UFSystem_deprecated.c
GeneratedCode/Burger_2_OpenCR/src/application/: Burger_2_color_O_color_0.cpp  Burger_2_common.h  Burger_2_led_O_led_0.cpp  Burger_2_wheel_O_wheelControl_0.cpp  semo_logger.h
GeneratedCode/Burger_2_RaspberryPi4_8/: Makefile.am
GeneratedCode/Burger_2_RaspberryPi4_8/src/api/: UFTask_deprecated.c
GeneratedCode/Burger_2_RaspberryPi4_8/src/application/: BS_R_leader.cic  Burger_2_GA_DTA_0.cpp  Burger_2_Robot_REMOTE_CONTROL_ReceiveCommandFromOperator_Burger_getModeTransferCommand_0.cpp  Burger_2_Robot_REMOTE_CONTROL_RemoteControl_Burger_remoteControl_0.cpp  Burger_2_Robot_SEARCH_GROUPING_ReceiveCommandFromOperator_Burger_getModeTransferCommand_0.cpp  Burger_2_Robot_groupA_SEARCHIN_MODE_SEARCHIN_Search_Burger_searchV3_R_controlAndReport_0.cpp  Burger_2_Robot_groupA_SEARCHIN_MODE_SEARCHIN_Search_Burger_searchV3_R_detectFrontMember_0.cpp  Burger_2_Robot_groupA_SEARCHIN_MODE_SEARCHIN_Search_Burger_searchV3_R_leader_0.cpp  Burger_2_Robot_groupA_SEARCHIN_MODE_SEARCHIN_Search_searchV3_0.c  Burger_2_Robot_groupA_SEARCHIN_MODE_SEARCHIN_Search_searchV3_0.cicl.h  Burger_2_Robot_groupB_SEARCHIN_MODE_SEARCHIN_Search_Burger_searchV3_R_controlAndReport_0.cpp  Burger_2_Robot_groupB_SEARCHIN_MODE_SEARCHIN_Search_Burger_searchV3_R_detectFrontMember_0.cpp  Burger_2_Robot_groupB_SEARCHIN_MODE_SEARCHIN_Search_Burger_searchV3_R_leader_0.cpp  Burger_2_Robot_groupB_SEARCHIN_MODE_SEARCHIN_Search_searchV3_0.c  Burger_2_Robot_groupB_SEARCHIN_MODE_SEARCHIN_Search_searchV3_0.cicl.h  Burger_2_action.c  Burger_2_action.h  Burger_2_camera_0.cpp  Burger_2_color_R_color_0.cpp  Burger_2_control_0.c  Burger_2_distance_0.cpp  Burger_2_event.c  Burger_2_event.h  Burger_2_group.c  Burger_2_group.h  Burger_2_group_action.c  Burger_2_group_action.cicl.h  Burger_2_grouping.cicl.h  Burger_2_grouping.cpp  Burger_2_leader.c  Burger_2_leader_0.c  Burger_2_leader_lib.cicl  Burger_2_leader_lib.cicl.h  Burger_2_led_R_led_0.cpp  Burger_2_listen.cic  Burger_2_listen_0.c  Burger_2_mode.c  Burger_2_mode.h  Burger_2_port.c  Burger_2_port.h  (+16 more)
GeneratedCode/Burger_2_RaspberryPi4_8/src/kernel/constrained/communication/: UKUEMLiteProtocol.c
GeneratedCode/Burger_2_RaspberryPi4_8/src/kernel/constrained/include/communication/: uem_bluetooth_data.h
GeneratedCode/Burger_2_RaspberryPi4_8/src/kernel/unconstrained/communication/: UKRemoteChannel.c  UKSocketCommunication.c  UKUEMProtocol.c
GeneratedCode/Burger_3_OpenCR/: Makefile
GeneratedCode/Burger_3_OpenCR/src/api/: UFControl.c  UFTask.c
GeneratedCode/Burger_3_OpenCR/src/application/: Burger_3_color_O_color_0.cpp  Burger_3_common.h  Burger_3_led_O_led_0.cpp  Burger_3_wheel_O_wheelControl_0.cpp  CL_O_led.cic
GeneratedCode/Burger_3_OpenCR/src/module/: Module_ev3dev.c
GeneratedCode/Burger_3_RaspberryPi4_8/: Doxyfile  Makefile.am
GeneratedCode/Burger_3_RaspberryPi4_8/src/api/: UFTimer_deprecated.c
GeneratedCode/Burger_3_RaspberryPi4_8/src/application/: BC_R_color.cic  Burger_3_GA_DTA_0.cpp  Burger_3_Robot_REMOTE_CONTROL_ReceiveCommandFromOperator_Burger_getModeTransferCommand_0.cpp  Burger_3_Robot_REMOTE_CONTROL_RemoteControl_Burger_remoteControl_0.cpp  Burger_3_action.c  Burger_3_action.h  (+54 more)
GeneratedCode/Burger_5_OpenCR/: Makefile
GeneratedCode/Burger_5_RaspberryPi4_8/: Makefile.am
GeneratedCode/Burger_6_OpenCR/: Makefile  OpenCR.mk
GeneratedCode/Burger_6_RaspberryPi4_8/: Makefile.am
GeneratedCode/EngineeringKit_1_RaspberryPi4_ek/: Doxyfile  Makefile.am
GeneratedCode/EngineeringKit_2_RaspberryPi4_ek/: Makefile.am
SWComponentLib/Algorithm/getModeTransferCommand/: CM_R_getModeTransferCommand.cic
SWComponentLib/Algorithm/remoteControl/: CR_R_getDirectionByMQTT.cic
SWComponentLib/Algorithm/searchV2/: BS_R_controlAndReport.cic  task.xml
SWComponentLib/Algorithm/searchV3/: BS_R_controlAndReport.cic  BS_R_detectFrontMember.cic  task.xml
(+362 files in other folders)
